<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="224dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/material_dynamic_primary10"
        android:shadowColor="@color/white"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:textColorHighlight="@color/material_dynamic_primary20"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextText9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextText9" />

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Register_text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="Email"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/editTextText10"
        app:layout_constraintStart_toStartOf="@+id/editTextText10"
        app:layout_constraintTop_toBottomOf="@+id/editTextText10" />

    <EditText
        android:id="@+id/editTextText8"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_security_24"
        android:autofillHints="Password"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/editTextText7"
        app:layout_constraintStart_toStartOf="@+id/editTextText7"
        app:layout_constraintTop_toBottomOf="@+id/editTextText7" />

    <EditText
        android:id="@+id/editTextText9"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="Password"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_security_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/editTextText8"
        app:layout_constraintStart_toStartOf="@+id/editTextText8"
        app:layout_constraintTop_toBottomOf="@+id/editTextText8" />

    <EditText
        android:id="@+id/editTextText10"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="username"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="@color/black"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>