<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/Blue0"
    android:visibility="visible"
    tools:context=".EnergyCalculator">


    <EditText
        android:id="@+id/power_usage"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="number"
        android:hint="@string/Power_usage"
        android:inputType="number"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/time"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:autofillHints="number"
        android:hint="@string/time"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/power_usage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/calculate_button"
            android:layout_width="259dp"
            android:layout_height="53dp"

            android:layout_marginStart="76dp"
            android:layout_marginTop="678dp"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="35dp"
            android:text="@string/Calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>