<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue1"
    tools:context=".MainActivity">


    <View
        android:id="@+id/layoutTable"
        android:layout_width="330dp"
        android:layout_height="596dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/background_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Energy Usage Calculator"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/energycalculator"
        app:layout_constraintEnd_toEndOf="@+id/layoutTable"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/layoutTable"
        app:layout_constraintTop_toTopOf="@+id/layoutTable"
        app:layout_constraintVertical_bias="0.777" />

    <ImageButton
        android:id="@+id/energycalculator"
        android:layout_width="157dp"
        android:layout_height="156dp"
        android:adjustViewBounds="true"

        android:contentDescription="@string/energycalculator_speakable_text"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28"
        app:srcCompat="@drawable/energycalculator" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="355dp"
        android:layout_height="55dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTable"
        app:menu="@menu/bottom_menu" />

    <ImageButton
        android:id="@+id/kitchen"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:background="@color/Green"

        android:contentDescription="@string/kitchen_speakable_text"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605"
        app:srcCompat="@drawable/kitchen" />

    <ImageButton
        android:id="@+id/livingroom"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:background="@color/Green"

        android:contentDescription="@string/livingroom_speakable_text"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605"
        app:srcCompat="@drawable/livingroom" />

    <ImageButton
        android:id="@+id/bedroom"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:background="@color/Green"

        android:contentDescription="@string/bedroom_speakable_text"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834"
        app:srcCompat="@drawable/bedroom" />

    <ImageButton
        android:id="@+id/bathroom"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:background="@color/Green"

        android:contentDescription="@string/bathroom_speakable_text"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834"
        app:srcCompat="@drawable/bathroom" />



</androidx.constraintlayout.widget.ConstraintLayout>